@@ -338,7 +338,7 @@ Number of functions from these:	1347
 
 > is.ALL(NULL)
 is.array           : . 
-is.atomic          : | 
+is.atomic          : . 
 is.call            : . 
 is.character       : . 
 is.complex         : . 
@@ -349,7 +349,7 @@ is.expression      : .
 is.factor          : . 
 is.finite          : NA 
 is.function        : . 
-is.infinite        :  
+is.infinite        : NA 
 is.integer         : . 
 is.language        : . 
 is.list            : . 
@@ -357,7 +357,7 @@ is.logical         : .
 is.matrix          : . 
 is.na              : NA 
 is.name            : . 
-is.nan             :  
+is.nan             : NA 
 is.null            : | 
 is.numeric         : . 
 is.numeric_version : . 
@@ -375,7 +375,7 @@ is.vector          : .
 
 > ##fails: is.ALL(NULL, not.using = c("is.single", "is.loaded"))
 > is.ALL(NULL,   true.only = TRUE)
-[1] "is.atomic"   "is.null"     "is.pairlist"
+[1] "is.null"     "is.pairlist"
 
 > all.equal(NULL, pairlist())
 [1] TRUE
